--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 .App {
   text-align: center;
   display: flex;
@@ -39,7 +53,8 @@ textarea {
   margin-bottom: 20px;
 }
 
-.button__bar > a > div > button {
+.button__bar > a > button,
+.button__bar > button {
   margin: 0 auto;
   padding: 5px 10px;
   width: 200px;
