--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 .App {
   text-align: center;
   display: flex;
-  height: 100%;
-}
-
-#root {
-  height: 100vh;
 }
 
 .sidebar {
   width: 30%;
-  padding: 50px 0;
+  padding: 20px 0 50px;
   background-color: #ba9cce;
 }
+
+.sidebar__title {
+  font-size: 3.5rem;
+}
+
 .main {
   width: 70%;
   background-color: #ebe97c;
@@ -199,4 +185,26 @@ textarea {
   100% {
     transform: rotate(0deg);
   }
+}
+
+.auth {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-bottom: 20px;
+}
+
+.auth__login {
+  display: block;
+}
+
+.auth__password {
+  display: block;
+  width: 150px;
+}
+
+.auth__button {
+  display: block;
+  width: 100px;
+  background-color: #1ed293;
 }
