--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,19 @@ textarea {
   margin: 20px auto;
 }
 
+.card__body {
+  position: relative;
+}
+
+span.card-title {
+  padding: 5px;
+  border-radius: 11px;
+  background-color: #5dff4a;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
 .card__food {
   width: 100%;
   display: flex;
@@ -165,6 +178,11 @@ textarea {
 
 .fa-trash-alt {
   color: #fc6167;
+}
+
+span .fa-drumstick-bite {
+  animation: none;
+  margin: 0;
 }
 
 .fa-drumstick-bite {
